feat: add Paper 1.16.1 adapter support